--- a/Bookify.Domain/Bookify.Domain.csproj
+++ b/Bookify.Domain/Bookify.Domain.csproj
@@ -1,3 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  <ItemGroup>
+    <ProjectReference Include="..\Bookify.SharedKernel\Bookify.SharedKernel.csproj" />
+  </ItemGroup>
 </Project>
