--- a/Directory.Packages.Props
+++ b/Directory.Packages.Props
@@ -5,6 +5,7 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <PackageVersion Include="MediatR" Version="12.5.0" />
     <PackageVersion Include="MediatR.Contracts" Version="2.0.1" />
   </ItemGroup>
 </Project>
