--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
 services:
   bookify.api:
     image: ${DOCKER_REGISTRY-}bookifyapi
+    container_name: Bookify.api
     build:
       context: .
       dockerfile: Bookify.Api/Dockerfile
+    depends_on:
+      - bookify.database
+
+  bookify.database:
+    image: postgres:latest
+    container_name: Bookify.Database
+    environment:
+      - POSTGRES_DB=BOOKIFY
+      - POSTGRES_USER=postgres 
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - ./.containers/database:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+    healthcheck:
+        test: ["CMD", "pg_isready", "-U", "postgres"]
+        interval: 30s
+        timeout: 10s
+        retries: 5
